2006-04-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/avatar.py:
	Fixed stupid bug with avatar conversion.

	* src/jabw.py:
	* src/session.py:
	Improved IQ-based avatar support.

2006-04-18  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/legacy/glue.py:
	Updated to use guess_encoding with vcard type data.

	* src/xmlconfig.py:
	Updated to shout more about config options.

	* src/config.py:
	* src/xmlconfig.py:
	Added functionality to complain about deprecated variables.

	* src/web/xmppcred.py:
	Added functionality to make web auth handler NOT keep trying.

2006-04-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Added Uri Shaked's SMS code.

	* src/config.py:
	* config_example.xml:
	* src/langs/en.py:
	* src/register.py:
	* src/jabw.py:
	* src/legacy/glue.py:
	Added support for JEP-0136 (message archiving) and ldap register auth.

	* src/config.py:
	* config_example.xml:
	* src/main.py:
	Migrated from useJ2Component to useRouteWrap and useComponentBinding.

	* src/services/GatewayTranslator.py:
	Fixed return of prompt to jid as specified in JEP-0100.

2006-04-16  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Removed utf-16be from the guess_encoding stuff... causes problems.

	* src/iq.py:
	* src/session.py:
	Added arg to errback.

	* src/adhoc.py:
	Couple of cleanups.

2006-04-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added actual failure on lack of loading plugin.

	* src/services/EntityTime.py:
	Added jabber:iq:time handler.

	* src/services/EntityTime.py:
	* src/services/VersionTeller.py:
	Cleanup.

	* src/globals.py:
	Added jabber:iq:last.
	Added jabber:iq:time.

	* src/services/VersionTeller.py:
	Added twisted version to os string.
	Shortened python version string.

2006-04-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Commented out pubsub support so I can release r180.

	* src/adhoc.py:
	* src/services/ConnectUsers.py:
	* src/services/GatewayTranslator.py: